<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homeautoma"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_port_1"
            android:layout_below="@+id/textView3"
            android:gravity="center"
            android:text="@string/port_5"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ac" />

        <ToggleButton
            android:id="@+id/Port5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/textView3"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_port_1"
            android:layout_below="@+id/textView5"
            android:gravity="center"
            android:text="@string/port_6"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/tv" />

        <ToggleButton
            android:id="@+id/Port6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/textView5"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_port_1"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/port_7"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/fan" />

        <ToggleButton
            android:id="@+id/Port7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/textView6"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_port_1"
            android:layout_below="@+id/Port7"
            android:gravity="center"
            android:text="@string/port_8"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/bulb" />

        <ToggleButton
            android:id="@+id/Port8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/Port7"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_port_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/port_1"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/Port1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/text_port_1"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/Port2"
            android:layout_alignStart="@+id/text_port_1"
            android:gravity="center"
            android:text="@string/port_2"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/Port2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/text_port_1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_port_1"
            android:layout_below="@+id/Port2"
            android:gravity="center"
            android:text="@string/port_3"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/Port3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/Port2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:gravity="center"
            android:text="@string/port_4"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/Port4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Port1"
            android:layout_below="@+id/textView2"
            android:textSize="30sp" />


    </LinearLayout>
</ScrollView>
